force-app/main/default/objects/Call_Service_Attribute__mdt/Call_Service_Attribute__mdt.object-meta.xml
<CustomObject>
    <label>Call Service Attribute</label>
    <pluralLabel>Call Service Attributes</pluralLabel>
</CustomObject>