force-app/main/default/objects/Call_Service_Attribute__mdt/fields/Api_Login__c.field-meta.xml
<CustomField>
    <fullName>Api_Login__c</fullName>
    <label>Api Login</label>
    <length>255</length>
    <type>Text</type>
</CustomField>