force-app/main/default/objects/Call_Service_Attribute__mdt/fields/Service_name__c.field-meta.xml
<CustomField>
    <fullName>Service_name__c</fullName>
    <label>Service name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>